# shadow_mocking

./: CMakeLists.txt  README.md  foo.hpp  foo_production.cpp  foo_test.cpp  main.cpp
